--- a/server/package.json
+++ b/server/package.json
@@ -19,8 +19,10 @@
     "mongoose": "^8.16.1"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^3.0.0",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.10",
     "tsx": "^4.20.3",
     "typescript": "^5.8.3"
   }
