--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,11 +1,32 @@
 {
   "compilerOptions": {
+    "target": "ES2020",
+    "module": "ESNext",
+    "moduleResolution": "Node",
     "esModuleInterop": true,
-    "moduleResolution": "node",
-    "target": "es6",
-    "module": "esnext",
     "strict": true,
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true
-  }
+    "forceConsistentCasingInFileNames": true,
+
+    "rootDir": ".",
+    "outDir": "dist",
+    "lib": ["ES2020"],
+    "types": ["node", "multer"],
+    "typeRoots": ["./node_modules/@types", "./src/types"],
+    "resolveJsonModule": true
+  },
+  "include": ["**/*.ts", "**/*.tsx", "**/*.d.ts"],
+  "exclude": ["dist", "node_modules"]
 }
+
+// {
+//   "compilerOptions": {
+//     "esModuleInterop": true,
+//     "moduleResolution": "node",
+//     "target": "es6",
+//     "module": "esnext",
+//     "strict": true,
+//     "skipLibCheck": true,
+//     "forceConsistentCasingInFileNames": true
+//   }
+// }
