--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,32 +1,22 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "module": "ESNext",
-    "moduleResolution": "Node",
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
     "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
     "strict": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-
     "rootDir": ".",
     "outDir": "dist",
+
     "lib": ["ES2020"],
     "types": ["node", "multer"],
     "typeRoots": ["./node_modules/@types", "./src/types"],
     "resolveJsonModule": true
   },
-  "include": ["**/*.ts", "**/*.tsx", "**/*.d.ts"],
+  "include": ["**/*.ts"],
   "exclude": ["dist", "node_modules"]
 }
 
-// {
-//   "compilerOptions": {
-//     "esModuleInterop": true,
-//     "moduleResolution": "node",
-//     "target": "es6",
-//     "module": "esnext",
-//     "strict": true,
-//     "skipLibCheck": true,
-//     "forceConsistentCasingInFileNames": true
-//   }
-// }
